@@ -24,7 +24,10 @@ import java.util.List;
 import com.mojang.blaze3d.vertex.PoseStack;
 
 import org.joml.Matrix4f;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.renderer.MultiBufferSource;
@@ -33,11 +36,10 @@ import net.minecraft.client.renderer.texture.OverlayTexture;
 import net.minecraft.client.renderer.texture.TextureAtlas;
 import net.minecraft.network.chat.Component;
 import net.minecraft.util.Mth;
-import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemDisplayContext;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.level.Level;
-import net.neoforged.neoforge.client.extensions.common.IClientFluidTypeExtensions;
+import net.minecraftforge.client.extensions.common.IClientFluidTypeExtensions;
 
 import appeng.api.client.AEKeyRenderHandler;
 import appeng.api.client.AEKeyRendering;
@@ -48,6 +50,8 @@ import appeng.client.gui.style.FluidBlitter;
 import appeng.util.Platform;
 
 public class InitStackRenderHandlers {
+    private static final Logger LOG = LoggerFactory.getLogger(InitStackRenderHandlers.class);
+
     private InitStackRenderHandlers() {
     }
 
@@ -78,7 +82,7 @@ public class InitStackRenderHandlers {
             // The Z-scaling by 0.001 causes the model to be visually "flattened"
             // This cannot replace a proper projection, but it's cheap and gives the desired effect.
             // We don't scale the normal matrix to avoid lighting issues.
-            poseStack.mulPose(new Matrix4f().scale(scale, scale, 0.001f));
+            poseStack.mulPoseMatrix(new Matrix4f().scale(scale, scale, 0.001f));
             // Rotate the normal matrix a little for nicer lighting.
             poseStack.last().normal().rotateX(Mth.DEG_TO_RAD * -45f);
 
@@ -95,11 +99,17 @@ public class InitStackRenderHandlers {
 
         @Override
         public List<Component> getTooltip(AEItemKey stack) {
-            return stack.getReadOnlyStack().getTooltipLines(
-                    Item.TooltipContext.of(Minecraft.getInstance().level),
-                    Minecraft.getInstance().player,
-                    Minecraft.getInstance().options.advancedItemTooltips ? TooltipFlag.Default.ADVANCED
-                            : TooltipFlag.Default.NORMAL);
+            try {
+                return stack.getReadOnlyStack().getTooltipLines(Minecraft.getInstance().player,
+                        Minecraft.getInstance().options.advancedItemTooltips ? TooltipFlag.Default.ADVANCED
+                                : TooltipFlag.Default.NORMAL);
+            } catch (Exception e) {
+                LOG.error("Getting the tooltip of item {} crashed!", stack.getId(), e);
+                return List.of(
+                        stack.getDisplayName(),
+                        Component.literal(stack.getId().toString()),
+                        Component.literal("GETTING TOOLTIP CRASHED").withStyle(ChatFormatting.RED));
+            }
         }
     }
 
@@ -139,30 +149,34 @@ public class InitStackRenderHandlers {
             var y1 = -scale / 2;
 
             var transform = poseStack.last().pose();
-            buffer.addVertex(transform, x0, y1, 0)
-                    .setColor(color)
-                    .setUv(sprite.getU0(), sprite.getV1())
-                    .setOverlay(OverlayTexture.NO_OVERLAY)
-                    .setLight(combinedLight)
-                    .setNormal(0, 0, 1);
-            buffer.addVertex(transform, x1, y1, 0)
-                    .setColor(color)
-                    .setUv(sprite.getU1(), sprite.getV1())
-                    .setOverlay(OverlayTexture.NO_OVERLAY)
-                    .setLight(combinedLight)
-                    .setNormal(0, 0, 1);
-            buffer.addVertex(transform, x1, y0, 0)
-                    .setColor(color)
-                    .setUv(sprite.getU1(), sprite.getV0())
-                    .setOverlay(OverlayTexture.NO_OVERLAY)
-                    .setLight(combinedLight)
-                    .setNormal(0, 0, 1);
-            buffer.addVertex(transform, x0, y0, 0)
-                    .setColor(color)
-                    .setUv(sprite.getU0(), sprite.getV0())
-                    .setOverlay(OverlayTexture.NO_OVERLAY)
-                    .setLight(combinedLight)
-                    .setNormal(0, 0, 1);
+            buffer.vertex(transform, x0, y1, 0)
+                    .color(color)
+                    .uv(sprite.getU0(), sprite.getV1())
+                    .overlayCoords(OverlayTexture.NO_OVERLAY)
+                    .uv2(combinedLight)
+                    .normal(0, 0, 1)
+                    .endVertex();
+            buffer.vertex(transform, x1, y1, 0)
+                    .color(color)
+                    .uv(sprite.getU1(), sprite.getV1())
+                    .overlayCoords(OverlayTexture.NO_OVERLAY)
+                    .uv2(combinedLight)
+                    .normal(0, 0, 1)
+                    .endVertex();
+            buffer.vertex(transform, x1, y0, 0)
+                    .color(color)
+                    .uv(sprite.getU1(), sprite.getV0())
+                    .overlayCoords(OverlayTexture.NO_OVERLAY)
+                    .uv2(combinedLight)
+                    .normal(0, 0, 1)
+                    .endVertex();
+            buffer.vertex(transform, x0, y0, 0)
+                    .color(color)
+                    .uv(sprite.getU0(), sprite.getV0())
+                    .overlayCoords(OverlayTexture.NO_OVERLAY)
+                    .uv2(combinedLight)
+                    .normal(0, 0, 1)
+                    .endVertex();
             poseStack.popPose();
         }
 
@@ -174,11 +188,11 @@ public class InitStackRenderHandlers {
         @Override
         public List<Component> getTooltip(AEFluidKey stack) {
             var tooltip = new ArrayList<Component>();
-            tooltip.add(stack.toStack(1).getHoverName());
+            tooltip.add(stack.toStack(1).getDisplayName());
 
             // Heuristic: If the last line doesn't include the modname, add it ourselves
             var modName = Platform.formatModName(stack.getModId());
-            if (!tooltip.getLast().getString().equals(modName)) {
+            if (tooltip.isEmpty() || !tooltip.get(tooltip.size() - 1).getString().equals(modName)) {
                 tooltip.add(Component.literal(modName));
             }
 
